Add speaker detail component (based on heroes tutorial)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="block">
-    <h2>{{title}}</h2>
-    <app-speakers></app-speakers>
-</div>
+<article>
+    <div class="block">
+        <h2>{{title}}</h2>
+        <app-speakers></app-speakers>
+    </div>
+</article>
